fix csrf error on lit; file upload kindoff working. jump buttons implemented

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -13,6 +13,10 @@
     padding: 15px;
 }
 
+.lowpad {
+    padding: 5px;
+}
+
 .js_enabled #cookie-message {
     display: none;
 }
@@ -450,6 +454,7 @@ textarea {
 
 .stepstyle {
     display: inline-block;
+    width: 100%;
     padding: 4px 12px;
     margin-bottom: 1px;
     color: #FFFFFF;
